# mike

./: .gitignore  .travis.yml  INSTALL  LICENSE  MIKE_VERSION_GEN  Makefile  Makefile.in  README  configure.ac  mike.conf.in  mike.sql
contrib/: archive  bk  documentation  drop-caches  lib.sh  postgres-debian-init  stream  tag
contrib/git-hooks/: commit-msg  post-receive
contrib/sql/: make_lot_of_directories.sql  mike-auto-explain.sql  mike-functions.sql  mike-gen-lot-of-users.sql  mike-relsize.sql  mike-tables.sql  mike-types.sql  mike-volumes.sql  xlink.sql
data/: conf.sql  data.mak  lv.sql  mimetypes.sql  users.sql
documentation/: Makefile.in  asciidoc.conf  mike-configurations.txt  mike-contrib.txt  mike-design.txt  mike-dev-guidelines.txt  mike-functions.txt  mike-install.txt  mike-license.txt  mike-lvm-support.txt  mike-table-directory.txt  mike-table-file.txt  mike-table-inode.txt  mike-table-volume.txt  mike-tables.txt  mike-tools-of-the-trade.txt  mike-types.txt  mike.txt
documentation/relnotes/: mike-v0.5.0.txt
functions/: __array_unset.sql  __check_order_by_cond.sql  __fsck.sql  __get_conf.sql  __get_id_mimetype.sql  __get_least_used_active_volume.sql  __get_least_used_lv.sql  __get_mimetype.sql  __get_random_volume.sql  __lvcreate.sql  __lvmvuser.sql  __lvusers.sql  __make_lot_of_directories.sql  __make_tree.sql  __mod_cons_hash.sql  __natsort.pl  __natsort.sql  __perform.sql  __pg_activity.sql  __pg_functions.sql  __pg_locks.sql  __pg_relkind_pretty.sql  __set_conf.sql  __stream.sql  __trigger_as_file_xfile_before_insert.sql  __trigger_directory_before_insert.sql  __trigger_file_before_insert.sql  adduser.sql  cpdir.sql  functions.mak  get-id-mimetype.sql  ls.sql  make_directory.sql  mkdir.sql  move_directory.sql  mvdir.sql  perform.sql  remove_directory.sql  rename.sql  rmdir.sql  (+9 more)
functions/asm/: __natsort_asm.asm  __natsort_pad.asm  asm.mak
functions/c/: __natsort.c  __natsort_asm.c  c.mak  mike.c
indexes/: as_file_xfile.sql  as_user_group.sql  directory.sql  file.sql  group.sql  indexes.mak  inode.sql  mimetype.sql  xfile.sql
lib/: mike.sh
test/: 0001-basic-tree.sh  Makefile.in  make_lot_of_directories.sql  t0001-basic-tree.sh  t0002-verify-dir-count.sh  t0003-fsck.sh  t0004-cpdir.sh  t0005-mvdir.sh  test
triggers/: after_insert_delete_directory.pl  after_insert_delete_file.pl  after_update_directory.pl  as_file_xfile.sql  before_insert_directory.pl  before_insert_file.pl  before_update_inode_group.pl  directory.sql  file.sql  triggers.mak
types/: inode_full_t.sql  types.mak
views/: __pg_activity.sql  __pg_functions.sql  __pg_locks.sql  __pg_relbloat.sql  __pg_relsizes.sql  __pg_tables.sql  views.mak
